ingress_files/console.minio_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console.minio-ingress
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: "public" 
spec:
  rules:
  - host: cosole.minio.neilwylie.com 
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: minio 
            port: 
              number: 9090
