ingress_files/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability  
  annotations:
    kubernetes.io/ingress.class: "public"  
spec:
  rules:
  - host: grafana.neilwylie.com  # Replace with your desired domain/subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port: 
              number: 80
